experimental/parser/testdata/parser/option/bad_path.proto.stderr.txt
error: missing option setting path
  --> testdata/parser/option/bad_path.proto:5:1
   |
 5 | option;
   | ^^^^^^^

error: missing option setting value
  --> testdata/parser/option/bad_path.proto:6:1
   |
 6 | option foo.bar;
   | ^^^^^^^^^^^^^^^

error: missing option setting path
  --> testdata/parser/option/bad_path.proto:7:1
   |
 7 | option = 2;
   | ^^^^^^^^^^^

error: unexpected absolute path in option setting
  --> testdata/parser/option/bad_path.proto:8:8
   |
 8 | option .(foo.bar).baz = 3;
   |        ^^^^^^^^^^^^^^ expected a path without a leading `.`
   |
  help: remove the leading `.`
   |
 8 | - option .(foo.bar).baz = 3;
 8 | + option (foo.bar).baz = 3;
   |

error: unexpected `/` in path in option setting
  --> testdata/parser/option/bad_path.proto:9:11
   |
 9 | option foo/(bar.baz).foo = 4;
   |           ^ help: replace this with a `.`

error: unexpected absolute path in option setting
  --> testdata/parser/option/bad_path.proto:13:9
   |
13 |         .(foo.bar).baz = 3,
   |         ^^^^^^^^^^^^^^ expected a path without a leading `.`
   |
  help: remove the leading `.`
   |
13 | -         .(foo.bar).baz = 3,
13 | +         (foo.bar).baz = 3,
   |

error: unexpected `/` in path in option setting
  --> testdata/parser/option/bad_path.proto:14:12
   |
14 |         foo/(bar.baz).foo = 4
   |            ^ help: replace this with a `.`

error: compact options cannot be empty
  --> testdata/parser/option/bad_path.proto:16:17
   |
16 |     int32 y = 2 [];
   |                 ^^ help: remove this

encountered 8 errors
